--- a/doc/deploy/docker-compose/docker-compose.yml
+++ b/doc/deploy/docker-compose/docker-compose.yml
@@ -607,6 +607,22 @@ services:
       - ./pulsar/data:/pulsar/data
     networks:
       - iot_network
+  # https://github.com/KouShenhai/Sentinel
+  sentinel-dashboard:
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/sentinel-dashboard:3.5.4
+    container_name: sentinel-dashboard
+    # 保持容器在没有守护程序的情况下运行
+    tty: true
+    restart: always
+    privileged: true
+    ports:
+      - "8972:8972"
+    volumes:
+      - ./sentinel/logs:/opt/logs/csp
+    env_file:
+      - env/sentinel.env
+    networks:
+      - iot_network
 networks:
   iot_network:
     driver: bridge
