--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -160,7 +160,35 @@ spring:
               enabled: true
             retry:
               enabled: true
-
+    # sentinel配置
+    sentinel:
+      datasource:
+        # key可以自定义
+        db0:
+          nacos:
+            # 服务注册&发现-地址
+            server-addr: @NACOS-DISCOVERY-ADDRESS@
+            # 服务注册&发现-命名空间
+            namespace: @NACOS-NAMESPACE@
+            # 服务注册&发现-数据ID
+            data-id: gateway-flow.json
+            # 服务注册&发现-规则类型【网关规则】
+            rule-type: gw_flow
+            # 服务注册&发现-分组ID
+            group-id: @NACOS-GROUP@
+            # 服务注册&发现-用户名
+            username: @NACOS-USERNAME@
+            # 服务注册&发现-密码
+            password: @NACOS-PASSWORD@
+            # 服务注册&发现-数据类型
+            data-type: json
+      filter:
+        enabled: true
+      web-context-unify: false
+      # 开启饥饿加载，直接初始化
+      eager: true
+      transport:
+        dashboard: sentinel:8972
 # actuator
 management:
   endpoints:
@@ -219,39 +247,3 @@ knife4j:
         context-path: /iot
         order: 2
 
-
-resilience4j:
-  timelimiter:
-    configs:
-      default:
-        # 超时时间
-        timeout-duration:
-          seconds: 15
-  circuitbreaker:
-    instances:
-      default:
-        # 失败率阈值（超过则开启断路器）
-        failure-rate-threshold: 50
-        # 慢调用率阈值（超过则开启断路器）
-        slow-call-rate-threshold: 60
-        # 慢调用判定时间
-        slow-call-duration-threshold:
-          seconds: 5
-        # 断路器开启后等待时间
-        wait-duration-in-open-state:
-          seconds: 1
-        # 滑动窗口的类型为时间窗口
-        sliding-window-type: time_based
-        # 统计窗口大小
-        sliding-window-size: 60
-        # 窗口内计算阈值的调用次数
-        minimum-number-of-calls: 5
-        # 半开状态下允许调用次数
-        permitted-number-of-calls-in-half-open-state: 15
-        # 半开状态最大等待时间
-        max-wait-duration-in-half-open-state:
-          seconds: 10
-        # 自动切换到半开
-        automatic-transition-from-open-to-half-open-enabled: true
-        # 禁用堆栈跟踪提升性能
-        writable-stack-trace-enabled: false
