--- a/laokou-cloud/laokou-nacos/src/main/resources/application.properties
+++ b/laokou-cloud/laokou-nacos/src/main/resources/application.properties
@@ -39,9 +39,9 @@ spring.application.name=${SERVICE_ID:laokou-nacos}
 # 环境
 spring.profiles.active=@PROFILE-ACTIVE@
 # 不暴露指标到Elastic
-management.metrics.export.elastic.enabled=false
+management.elastic.metrics.export.enabled=false
 # 不暴露指标到Influx
-management.metrics.export.influx.enabled=false
+management.influx.metrics.export.enabled=false
 # 配置推送失败时的最大重试次数
 nacos.config.push.maxRetryTime=50
 # 启用认证信息的缓存，减少重复认证的开销
