--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -269,6 +269,26 @@ spring:
       ignored-interfaces:
         - docker0
         - veth.*
+    # Sentinel配置
+    sentinel:
+      datasource:
+        # 自定义名称
+        db0:
+          nacos:
+            server-addr: @NACOS-CONFIG-ADDRESS@
+            namespace: @NACOS-NAMESPACE@
+            data-id: auth-flow.json
+            data-type: json
+            group-id: @NACOS-GROUP@
+            username: @NACOS-USERNAME@
+            password: @NACOS-PASSWORD@
+            rule-type: flow
+      web-context-unify: false
+      eager: true #开启饥饿加载，直接初始化
+      transport:
+        dashboard: sentinel:8972
+      filter:
+        enabled: true
 # actuator
 management:
   endpoints:
