--- a/doc/deploy/docker-compose/docker-compose.yml
+++ b/doc/deploy/docker-compose/docker-compose.yml
@@ -358,7 +358,7 @@ services:
           cpus: '0.50'
           memory: 1G
   nacos:
-    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-nacos:3.5.4
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-nacos:3.5.4.1
     container_name: nacos
     # 保持容器在没有守护程序的情况下运行
     tty: true
@@ -369,7 +369,7 @@ services:
       - "9848:9848"
       - "9849:9849"
     volumes:
-      - ./nacos/logs:/opt
+      - ./nacos/logs:/opt/nacos/logs
     env_file:
       - env/nacos.env
     networks:
@@ -377,7 +377,7 @@ services:
     depends_on:
       - postgresql
   monitor:
-    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-monitor:3.5.4
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-monitor:3.5.4.1
     container_name: monitor
     # 保持容器在没有守护程序的情况下运行
     tty: true
@@ -398,7 +398,7 @@ services:
     networks:
       - iot_network
   gateway:
-    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-gateway:3.5.4
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-gateway:3.5.4.1
     container_name: gateway
     tty: true
     env_file:
@@ -417,7 +417,7 @@ services:
       - kafka
       - redis
   auth:
-    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-auth-start:3.5.4
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-auth-start:3.5.4.1
     container_name: auth
     tty: true
     env_file:
@@ -437,7 +437,7 @@ services:
       - kafka
       - redis
   iot:
-    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-iot-start:3.5.4
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-iot-start:3.5.4.1
     container_name: iot
     tty: true
     env_file:
@@ -456,7 +456,7 @@ services:
       - kafka
       - redis
   admin:
-    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-admin-start:3.5.4
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-admin-start:3.5.4.1
     container_name: admin
     tty: true
     env_file:
@@ -476,7 +476,7 @@ services:
       - kafka
       - redis
   logstash:
-    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-logstash-start:3.5.4
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/laokou-logstash-start:3.5.4.1
     container_name: logstash
     tty: true
     env_file:
@@ -495,7 +495,7 @@ services:
       - elasticsearch
       - kafka
   ui:
-    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/ui:3.5.4
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/ui:3.5.4.1
     container_name: ui
     # 保持容器在没有守护程序的情况下运行
     tty: true
@@ -608,6 +608,7 @@ services:
     networks:
       - iot_network
   # https://github.com/KouShenhai/Sentinel
+  # 账号/密码 => sentinel/laokou123
   sentinel-dashboard:
     image: registry.cn-shenzhen.aliyuncs.com/koushenhai/sentinel-dashboard:3.5.4
     container_name: sentinel-dashboard
@@ -621,6 +622,23 @@ services:
       - ./sentinel/logs:/opt/logs/csp
     env_file:
       - env/sentinel.env
+    networks:
+      - iot_network
+  # https://github.com/KouShenhai/snail-job
+  # 账号/密码 => admin/laokou123
+  snail-job:
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/snail-job:3.5.4.1
+    container_name: snail-job
+    # 保持容器在没有守护程序的情况下运行
+    tty: true
+    restart: always
+    privileged: true
+    ports:
+      - "8088:8088"
+    volumes:
+      - ./snail-job/logs:/opt/data/log
+    env_file:
+      - env/snail-job.env
     networks:
       - iot_network
 networks:
