--- a/doc/deploy/docker-compose/env/sentinel.env
+++ b/doc/deploy/docker-compose/env/sentinel.env
@@ -4,3 +4,5 @@ VERSION=3.5.4
 PROFILE=dev
 SERVER_PORT=8972
 JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseG1GC -Duser.timezone=GMT+08"
+TZ=Asia/Shanghai
+LANG=zh_CN.UTF-8
