feat: 优化oss上传逻辑，所有的上传记录到日志，用户图片关联上传日志

--- a/laokou-common/laokou-common-log/pom.xml
+++ b/laokou-common/laokou-common-log/pom.xml
@@ -25,6 +25,10 @@
       <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-distributed-identifier-client</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
