--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/bootstrap.yml
@@ -55,6 +55,7 @@ dubbo:
       register-consumer-url: true
       namespace: ${NACOS-NAMESPACE}
     group: DUBBO_${NACOS-GROUP}
+    check: false
   protocol:
     name: dubbo
     port: ${PROTOCOL_PORT:1116}
@@ -63,3 +64,5 @@ dubbo:
     name: dubbo-${spring.application.name}
     logger: slf4j
     qos-port: ${QOS_PORT:1117}
+  consumer:
+    check: false
