--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -151,6 +151,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-sentinel</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-oss-client</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
