--- a/laokou-service/laokou-oss/laokou-oss-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-oss/laokou-oss-start/src/main/resources/bootstrap.yml
@@ -22,6 +22,7 @@ dubbo:
       register-consumer-url: true
       namespace: ${NACOS-NAMESPACE}
     group: DUBBO_${NACOS-GROUP}
+    check: false
   protocol:
     name: dubbo
     port: ${PROTOCOL_PORT:1114}
@@ -30,3 +31,5 @@ dubbo:
     name: ${spring.application.name}
     logger: slf4j
     qos-port: ${QOS_PORT:1115}
+  consumer:
+    check: false
