--- a/laokou-service/laokou-report/laokou-report-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-report/laokou-report-start/src/main/resources/bootstrap.yml
@@ -18,6 +18,8 @@ spring:
   cloud:
     nacos:
       config:
+        # 开启配置中心
+        enabled: true
         server-addr: ${NACOS-CONFIG-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
         username: ${NACOS-USERNAME}
