feat: 增加自定义异常抛出，去掉默认异常拦截，dubbo协议改为trip协议，为使用多语言go铺路

--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/bootstrap.yml
@@ -61,12 +61,11 @@ dubbo:
     group: DUBBO_${NACOS-GROUP}
     check: false
   protocol:
-    name: dubbo
-    port: ${PROTOCOL_PORT:1116}
-    serialization: fury
+    name: tri
+    port: -1
   application:
     name: dubbo-${spring.application.name}
     logger: slf4j
-    qos-port: ${QOS_PORT:1117}
+    qos-port: ${QOS_PORT:1116}
   consumer:
     check: false
