--- a/laokou-common/laokou-common-dubbo/pom.xml
+++ b/laokou-common/laokou-common-dubbo/pom.xml
@@ -13,20 +13,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.apache.fury</groupId>
-      <artifactId>fury-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.dubbo.extensions</groupId>
-      <artifactId>dubbo-serialization-fury</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.fury</groupId>
-          <artifactId>fury-core</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
       <groupId>org.apache.dubbo</groupId>
       <artifactId>dubbo-spring-boot-starter</artifactId>
       <exclusions>
@@ -49,6 +35,10 @@
           <artifactId>bcprov-jdk18on</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-i18n</artifactId>
     </dependency>
   </dependencies>
 
