--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/bootstrap.yml
@@ -61,12 +61,11 @@ dubbo:
     group: DUBBO_${NACOS-GROUP}
     check: false
   protocol:
-    name: dubbo
-    port: ${PROTOCOL_PORT:1118}
-    serialization: fury
+    name: tri
+    port: -1
   application:
     name: dubbo-${spring.application.name}
     logger: slf4j
-    qos-port: ${QOS_PORT:1119}
+    qos-port: ${QOS_PORT:1117}
   consumer:
     check: false
