--- a/laokou-service/laokou-oss/laokou-oss-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-oss/laokou-oss-start/src/main/resources/bootstrap.yml
@@ -24,12 +24,13 @@ dubbo:
     group: DUBBO_${NACOS-GROUP}
     check: false
   protocol:
-    name: dubbo
-    port: ${PROTOCOL_PORT:1114}
-    serialization: fury
+    name: tri
+    port: -1
   application:
     name: ${spring.application.name}
     logger: slf4j
     qos-port: ${QOS_PORT:1115}
+  provider:
+    filter: dubboException,-exception
   consumer:
     check: false
