--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -92,7 +92,7 @@
     <!--taos-jdbcdriver版本-->
     <taos-jdbcdriver.version>3.6.3</taos-jdbcdriver.version>
     <!--fory-core版本-->
-    <fory-core.version>0.12.0-SNAPSHOT</fory-core.version>
+    <fory-core.version>0.11.2</fory-core.version>
     <!--browscap-java版本-->
     <browscap-java.version>1.5.1</browscap-java.version>
     <!--liquibase-core版本-->
@@ -156,7 +156,7 @@
     <!--jsoup版本-->
     <jsoup.version>1.21.1</jsoup.version>
     <!--dubbo版本-->
-    <dubbo.version>3.3.6-SNAPSHOT</dubbo.version>
+    <dubbo.version>3.3.5</dubbo.version>
     <!--pf4j版本-->
     <pf4j.version>0.10.0</pf4j.version>
     <!--dubbo-serialization版本-->
