--- a/laokou-service/laokou-oss/laokou-oss-client/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-client/pom.xml
@@ -16,4 +16,18 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.dubbo</groupId>
+        <artifactId>dubbo-maven-plugin</artifactId>
+        <version>${dubbo-maven-plugin.version}</version>
+        <configuration>
+          <outputDir>build/generated/source/proto/main/java</outputDir>
+          <protocVersion>${protobuf-java.version}</protocVersion>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
