--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,8 @@
     <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
     <checkstyle.version>10.26.1</checkstyle.version>
     <spring-javaformat-checkstyle.version>0.0.47</spring-javaformat-checkstyle.version>
+    <dubbo-maven-plugin.version>3.3.5</dubbo-maven-plugin.version>
+    <protobuf-java.version>3.25.8</protobuf-java.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -168,17 +170,6 @@
       </releases>
     </repository>
     <repository>
-      <id>maven-central</id>
-      <name>Maven Central</name>
-      <url>https://repo.maven.apache.org/maven2</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-    </repository>
-    <repository>
       <id>spring-milestones</id>
       <name>Spring Milestones</name>
       <url>https://repo.spring.io/milestone</url>
@@ -190,14 +181,6 @@
       <id>spring-snapshots</id>
       <name>Spring Snapshots</name>
       <url>https://repo.spring.io/snapshot</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-    </repository>
-    <repository>
-      <id>apache-snapshots</id>
-      <name>Apache Snapshots</name>
-      <url>https://repository.apache.org/snapshots/</url>
       <releases>
         <enabled>false</enabled>
       </releases>
