feat: spring不对dubbo protobuf生成类格式化，checkstyle不对生成类代码风格检查

--- a/laokou-service/laokou-oss/laokou-oss-client/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-client/pom.xml
@@ -14,6 +14,14 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -23,9 +31,16 @@
         <artifactId>dubbo-maven-plugin</artifactId>
         <version>${dubbo-maven-plugin.version}</version>
         <configuration>
-          <outputDir>build/generated/source/proto/main/java</outputDir>
+          <outputDir>src/main/java</outputDir>
           <protocVersion>${protobuf-java.version}</protocVersion>
         </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
