--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -159,8 +159,6 @@
     <dubbo.version>3.3.5</dubbo.version>
     <!--pf4j版本-->
     <pf4j.version>0.10.0</pf4j.version>
-    <!--dubbo-serialization版本-->
-    <dubbo-serialization.version>3.3.1</dubbo-serialization.version>
     <!--minio版本-->
     <minio.version>8.5.17</minio.version>
     <!--spring-security版本-->
@@ -194,11 +192,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-actuator-autoconfigure</artifactId>
         <version>${spring-boot.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.dubbo.extensions</groupId>
-        <artifactId>dubbo-serialization-fury</artifactId>
-        <version>${dubbo-serialization.version}</version>
       </dependency>
       <dependency>
         <groupId>org.pf4j</groupId>
@@ -258,6 +251,11 @@
       <dependency>
         <groupId>org.apache.dubbo</groupId>
         <artifactId>dubbo-nacos-spring-boot-starter</artifactId>
+        <version>${dubbo.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.dubbo</groupId>
+        <artifactId>dubbo</artifactId>
         <version>${dubbo.version}</version>
       </dependency>
       <dependency>
