--- a/pom.xml
+++ b/pom.xml
@@ -354,6 +354,10 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <includes>src/main/java/**/*.java</includes>
+          <excludes>src/main/java/org/laokou/oss/api/*.java</excludes>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
