--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -153,7 +153,7 @@
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-oss-client</artifactId>
+      <artifactId>laokou-oss-proto</artifactId>
     </dependency>
   </dependencies>
 
