--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -179,6 +179,11 @@
         <version>${laokou.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.laokou</groupId>
+        <artifactId>laokou-distributed-identifier-proto</artifactId>
+        <version>${laokou.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-oauth2-core</artifactId>
         <version>${spring-security.version}</version>
