fix: 修复maven ci报错 feat: 完成现有api的dubbo protobuf+triple协议改造

--- a/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-infrastructure/pom.xml
+++ b/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-infrastructure/pom.xml
@@ -50,7 +50,7 @@
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-dubbo</artifactId>
+      <artifactId>laokou-distributed-identifier-proto</artifactId>
     </dependency>
   </dependencies>
 
