--- a/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
@@ -74,6 +74,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-oss-proto</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-distributed-identifier-proto</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
