--- a/laokou-common/laokou-common-data-cache/pom.xml
+++ b/laokou-common/laokou-common-data-cache/pom.xml
@@ -50,6 +50,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-domain</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-redis</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
