--- a/laokou-common/laokou-common-log/pom.xml
+++ b/laokou-common/laokou-common-log/pom.xml
@@ -25,6 +25,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-distributed-identifier-proto</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-tenant</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
