--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -155,6 +155,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-oss-proto</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-tenant</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
