--- a/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -2,10 +2,10 @@
   "groups": [],
   "properties": [
     {
-      "name": "pulsar.topic.tenant1",
-      "type": "java.lang.String",
-      "description": "Pulsar Topic租户1.",
-      "defaultValue": "persistent://test/test"
+      "name": "spring.pulsar.topic",
+      "type": "java.util.Map<java.lang.String, java.lang.String>",
+      "description": "Pulsar主题.",
+      "sourceType": "org.laokou.common.pulsar.config.SpringPulsarProperties"
     }
   ]
 }
