--- a/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
@@ -64,7 +64,7 @@
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-mybatis-plus</artifactId>
+      <artifactId>laokou-common-tenant</artifactId>
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
@@ -77,6 +77,10 @@
     <dependency>
       <groupId>org.laokou</groupId>
       <artifactId>laokou-distributed-identifier-proto</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-data-cache</artifactId>
     </dependency>
   </dependencies>
 
