--- a/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
@@ -82,6 +82,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-data-cache</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-domain</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
