--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,11 +40,19 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
-
+      uses: actions/checkout@v4.2.2
+      with:
+        fetch-depth: 2
+    - name: Set up JDK
+      uses: actions/setup-java@v4.7.1
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        cache: maven
+        architecture: x64
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
+      uses: github/codeql-action/init@v3.29.5
       with:
         languages: ${{ matrix.language }}
         # If you wish to specify custom queries, you can do so here or in a config file.
@@ -53,3 +61,8 @@ jobs:
 
         # Details on CodeQL's query packs refer to : https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
         # queries: security-extended,security-and-quality
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v3.29.5
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v3.29.5
