--- a/laokou-service/laokou-oss/laokou-oss-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-oss/laokou-oss-start/src/main/resources/bootstrap.yml
@@ -31,6 +31,6 @@ dubbo:
     logger: slf4j
     qos-port: ${QOS_PORT:1115}
   provider:
-    filter: dubboException,-exception
+    filter: dubboException,dubboTraceProvider,-exception
   consumer:
     check: false
