--- a/laokou-service/laokou-cola/pom.xml
+++ b/laokou-service/laokou-cola/pom.xml
@@ -4,10 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
+    <artifactId>laokou-service</artifactId>
     <groupId>org.laokou</groupId>
-    <artifactId>KCloud-Platform-IoT</artifactId>
     <version>3.5.4-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>laokou-cola</artifactId>
