test: 修改测试类，去掉log4j依赖

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,6 +34,8 @@ jobs:
           fail_ci_if_error: true
           files: |
             ./laokou-common/laokou-common-core/target/site/jacoco/jacoco.xml,
+            ./laokou-common/laokou-common-trace/target/site/jacoco/jacoco.xml,
+            ./laokou-common/laokou-common-algorithm/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-crypto/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-i18n/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-xss/target/site/jacoco/jacoco.xml,
@@ -53,7 +55,7 @@ jobs:
             ./laokou-service/laokou-generator/laokou-generator-start/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-logstash/laokou-logstash-start/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-auth/laokou-auth-domain/target/site/jacoco/jacoco.xml,
-            ./laokou-service/laokou-oss/laokou-auth-start/target/site/jacoco/jacoco.xml
+            ./laokou-service/laokou-oss/laokou-oss-start/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Build with Maven
         run: mvn clean install -P dev -DskipTests -B
