--- a/laokou-cloud/laokou-nacos/src/main/resources/application.properties
+++ b/laokou-cloud/laokou-nacos/src/main/resources/application.properties
@@ -70,19 +70,36 @@ nacos.naming.empty-service.clean.initial-delay-ms=50000
 nacos.naming.empty-service.clean.period-time-ms=30000
 # 配置无需认证即可访问的 URL 路径，通常用于静态资源或健康检查
 nacos.security.ignore.urls=/,/error,/**/*.css,/**/*.js,/**/*.html,/**/*.map,/**/*.svg,/**/*.png,/**/*.ico,/console-ui/public/**,/v1/auth/**,/v1/console/health/**,/actuator/**,/v1/console/server/**
+# 禁用SpringBoot的数据库自动装配
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+# Nacos服务控制台端口
 nacos.console.port=8048
+# Nacos服务主端口
 nacos.server.main.port=8848
+# Nacos服务上下文路径
 nacos.server.contextPath=/nacos
+# Nacos服务控制台上下文路径
 nacos.console.contextPath=
+# 控制台访问远程Nacos服务，使用的上下文路径
 nacos.console.remote.server.context-path=/nacos
+# 开启Nacos管理员认证
 nacos.core.auth.admin.enabled=true
+# 控制台是否启用认证
 nacos.core.auth.console.enabled=true
+# 是否启用Kubernetes同步，false表示不启用
 nacos.k8s.sync.enabled=false
+# 部署模式
+# standalone：单机模式
+# cluster：集群模式
+# merged：合并模式（Nacos支持Config+Naming模块合并部署，默认推荐方式）
 nacos.deployment.type=merged
+# 单个客户端最多能订阅20个模糊匹配模式（用于服务发现）
 nacos.naming.fuzzy.watch.max.pattern.count=20
+# 每个模糊模式最多能匹配500个服务
 nacos.naming.fuzzy.watch.max.pattern.match.service.count=500
+# 单个客户端最多能订阅20个模糊模式（用于配置监听）
 nacos.config.fuzzy.watch.max.pattern.count=20
+# 每个模糊模式最多能匹配500个配置项
 nacos.config.fuzzy.watch.max.pattern.match.config.count=500
 # 指定数据库类型
 spring.sql.init.platform=@DATASOURCE-PLATFORM@
