feat: 从xml读取数据库驱动配置

--- a/laokou-cloud/laokou-nacos/src/main/resources/application.properties
+++ b/laokou-cloud/laokou-nacos/src/main/resources/application.properties
@@ -127,7 +127,7 @@ db.pool.config.validation-timeout=10000
 # 最大连接数
 db.pool.config.maximum-pool-size=50
 # 数据库驱动
-db.pool.config.driver-class-name=org.postgresql.Driver
+db.pool.config.driver-class-name=@DATASOURCE-DRIVER-CLASS-NAME@
 # 开启数据库版本管理工具
 spring.liquibase.enabled=true
 # 数据库版本变更配置
